reworked layout, change in color palette needed and hero image/text alignment needs correction

--- a/Home.css
+++ b/Home.css
@@ -4,9 +4,9 @@
 .topNavWrap 
 {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: row-reverse;
     background-color: rgb(161, 156, 156);
-    align-content:space-around;
+    align-content: flex-end;
     height: 100 px;
     width: auto;
     margin-left: -10px;
@@ -14,9 +14,33 @@
     overflow:hidden;
 }
 
+.extrahorizontal
+ {
+    display: block;
+    background-color: rgb(212, 211, 211);
+    padding: 35px;
+    margin-left: -10px;
+    margin-right: -10px;
+ }
+.nav
+{
+    margin-right: 20px;
+}
+
+button.nav
+{
+    background-color: rgb(108, 126, 133);
+    color: mintcream;
+    padding: 10px;
+    border-color: rgb(108, 126, 133);
+    border-radius: 5px;
+    height: 80px;
+    width: 260px;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 .logo
 {   
-flex-grow: 1;
 margin-left: 10px;
 border-color:  rgb(108, 126, 133); 
 border-width: 5px;
@@ -28,21 +52,19 @@ left:30px;
 }
 
 /* hero image style */
-.heroImage
+.heroImageWrap
 {
 max-width: 100%;
 max-height: 100%;
 display: flex;
+flex-direction: row;
 border-color:  rgb(108, 126, 133); 
 border-width: 5px;
 border-style: solid;
-justify-content:space-evenly;
-
+justify-content:center;
 }
 
-.topNav{
-        margin-top: -10px;
-}
+
 
 .heroText
 {
@@ -86,5 +108,12 @@ button
 html
 {
  background-color: rgb(108, 126, 133);;
+
+}
+
+/* text styling */
+
+.salesPitch
+{
 
 }
